samples/_failures_safe/1761356155_cbf183_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63a4e966.c: In function ‘main’:
./samples/SAFE/__tmp_63a4e966.c:149:46: error: ‘m’ undeclared (first use in this function)
  149 |     printf("Initial state: %s\n", state_name(m
      |                                              ^
./samples/SAFE/__tmp_63a4e966.c:149:46: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_63a4e966.c:149:47: error: expected ‘)’ at end of input
  149 |     printf("Initial state: %s\n", state_name(m
      |                                             ~ ^
      |                                               )
./samples/SAFE/__tmp_63a4e966.c:149:5: error: expected declaration or statement at end of input
  149 |     printf("Initial state: %s\n", state_name(m
      |     ^~~~~~
